--- a/test.html
+++ b/test.html
@@ -6,54 +6,66 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" type="text/css" href="resources/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" type="text/css" href="resources/lib/Slidebars/dist/slidebars.css" />
+        <link rel="stylesheet" type="text/css" href="resources/lib/angular-carousel/dist/angular-carousel.css" />
 
 
         <script src="resources/lib/angular/angular.js" ></script>
         <script src="resources/lib/jquery/dist/jquery.js" ></script>
         <script src="resources/lib/bootstrap/dist/js/bootstrap.js" ></script>
-
-
-
+        <script src="resources/lib/angular-touch/angular-touch.js" ></script>
+        <script src="resources/lib/angular-carousel/dist/angular-carousel.js" ></script>
 
 
 
         <script type="text/javascript">
 
 
-            var app = angular.module('ang', []);
+            var app = angular.module('ang', ['angular-carousel']);
             app.controller('angCtrl', function ($scope, $interval) {
+                $scope.itens = [
+                    {name: 'Carlos'},
+                    {name: 'Jao'},
+                    {name: 'Mario'},
+                    {name: 'Ana'}
 
+                ];
+                $scope.add = function (item) {
+                    $scope.itens.push(item);
+                    $scope.item = "";
+                }
             });
 
 
         </script>
+
+
         <style type="text/css">
-            #map{
-                width: 100%;
-                height: 300px;
+            .layer{
+                background: red;
+                border: solid blue 3px;
+                padding: 1em;
+            }
+            .image{
+                height: 100%;
             }
         </style>
 
     </head>
     <body ng-controller="angCtrl">
         <div class="container">
-            <div class="col-md-offset-3 col-md-6">
-                <div id="map"></div>
+            <div class="col-md-12" style="height: 400px;">
+                <input type="text" ng-model="item.name" class="form-control" />
+                <button class="btn btn-primary btn-block" ng-click="add(item)">
+                    Add
+                </button>
+                <br />
+                <ul rn-carousel rn-carousel-index="1" class="images">
+                    <li ng-repeat="i in itens">
+                        <div class="layer">{{ i.name}}</div>
+                    </li>
+                </ul>
             </div>
         </div>
     </body>
-    <script>
 
-        var map;
-        function initMap(lat, lng) {
-            map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: lat, lng: lng},
-                zoom: 8
-            });
-        }
-
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTbk54QQ8sHvqi0QhZ0HAAoQa_pllO4Co&callback=initMap"
-    async defer></script>
 </html>
