--- a/index.html
+++ b/index.html
@@ -263,22 +263,13 @@
                         <img src="resources/img/arrow_up_blue.png" class="img-responsive" style="transform: rotate({{atualMarine.winddirDegree}}deg)"/>
                         <img src="resources/img/compass.png" class="img-responsive"/>
                     </div>
-                    <table class="table table-direcoes">
-                        <tr>
-                            <td>
-                                <img src="resources/img/direcao_vento.png" />
-                                Vento
-                            </td>
-                            <td>Azul</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img src="resources/img/direcao_onda.png" />
-                                Onda
-                            </td>
-                            <td>Verde</td>
-                        </tr>
-                    </table>
+                    <div class="legenda-direcoes">
+                        <div style="width: 35px; height: 35px; background-color: #337ab7; border-radius: 10px;"></div>
+                        <div>Vento</div>
+                        <div style="width: 35px; height: 35px; background-color: #5cb85c; border-radius: 10px;"></div>
+                        <div>Onda</div>
+                    </div>
+                    <hr />
 
                     <div id="map"></div>
 
