--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        
     -->
     <head>
-        <title>NoSurf</title>
+        <title>Praianos</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8" />
 
@@ -40,6 +40,7 @@
         <link rel="stylesheet" href="resources/lib/weather-icons/css/weather-icons-wind.css">
         <link rel="stylesheet" href="resources/lib/angular-carousel/dist/angular-carousel.css">
         <link rel="stylesheet" href="resources/css/style.css" >
+        <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
 
         <script type="text/javascript" src="resources/lib/angular/angular.js"></script>
@@ -85,6 +86,7 @@
                     <li class="list-group-item">
                         <h3>
                             Escolha sua Praia
+                            <img src="favicon.ico" class="pull-right" style="position: absolute; top: 0; left: 0;width: 32px; height: 32px; "/>
                         </h3>
                     </li>
 
