--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="row"
                  ng-class="{esconde:!atualMarine}"
                  >
-                <div class="col-md-6 table-responsive">
+                <div class="col-md-6 ">
                     <h2>Previsão Atual</h2>
                     <table class="table table-now">
                         <tr>
