--- a/index.html
+++ b/index.html
@@ -366,7 +366,19 @@
 
 
         </div>
-
+        <div class="row">
+            <div class="col-md-12">
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- Praianos -->
+                <ins class="adsbygoogle"
+                     style="display:inline-block;width:728px;height:90px"
+                     data-ad-client="ca-pub-8292462256462069"
+                     data-ad-slot="5075994036"></ins>
+                <script>
+                                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript">
@@ -401,14 +413,6 @@
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTbk54QQ8sHvqi0QhZ0HAAoQa_pllO4Co&callback=initMap"
     async defer></script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Praianos -->
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
-         data-ad-client="ca-pub-8292462256462069"
-         data-ad-slot="5075994036"></ins>
-    <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+
 </body>
 </html>
