--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- Praianos -->
                 <ins class="adsbygoogle"
-                     style="display:inline-block;width:728px;height:90px"
+                     style="display:inline-block;width:100%;height:90px"
                      data-ad-client="ca-pub-8292462256462069"
                      data-ad-slot="5075994036"></ins>
                 <script>
