--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
                 margin: 0;
                 display: flex;
                 width: 50%;
-                
+
             }
             .tab-menu ul li{
                 flex :1;
@@ -148,16 +148,16 @@
                 $('.tab-content-in').removeClass("tab-content-animate");
                 prc = ev.deltaX * 100 / ev.target.offsetWidth;
                 //console.log(prc);
-                console.log(ev);
+                console.log(prc + " - " + cur);
                 if ((ev.type == "panright" && ind < 1) || (ev.type == "panleft" && ind >= totContent - 1)) {
 
                 } else {
                     $('.tab-content-in').css({
                         transform: "translate(" + (prc + (ind * -100)) + "%)"
                     });
-                    if (prc <= -changeLimit && cur < totContent - 1) {
+                    if (prc <= -changeLimit) {
                         cur = ind + 1;
-                    } else if (prc >= changeLimit && cur > 0) {
+                    } else if (prc >= changeLimit) {
                         cur = ind - 1;
                     } else {
                         cur = ind;
