--- a/test.html
+++ b/test.html
@@ -52,9 +52,6 @@
                 list-style: none;
                 //box-shadow: 0px 0px 4px black;
 
-                margin: .3em;
-                padding: .3em;
-                font-size: 1.5em;
 
             }
             .tab-menu-active{
@@ -62,8 +59,9 @@
             }
             .tab-content{
                 border: solid green 1px;
-                height: 70vh;
+                height: 100%;
                 overflow-x: hidden;
+
             }
             .tab-content-in{
                 //border: solid #EBDB8D 1px;
@@ -80,35 +78,127 @@
                 width: 100%;
                 height: 100%;
                 position: absolute;
+                overflow-y: auto;
+            }
+            .header > *{
+                float: left;
+            }
+            body, html{
+                overflow: hidden;
+            }
+            body{
+                position: relative;
+                transition: linear all .5s;
+            }
+            .menu{
+                position: fixed;
+                background-color: #343434;
+                color: white;
+                width: 50%;
+                height: 100%;
+                transition: linear all .5s;
+                left: 0;
+                top: 0;
+            }
+            .menu-show .menu{
+                left: 0%;
+                z-index: 10;
+            }
+            .menu-show{
+                left: 50%;
+            }
+            .menu-hide{
+                left: 0%;
+            }
+            .overlayer{
+                transition: linear all .5s;
+                position: absolute;
+                left: 0;
+                top: 0;
+            }
+            .menu-show .overlayer{
+                background-color: rgba(0,0,0,0.6);
+
+                width: 100%;
+                height: 100%;
+
+                z-index: 1;
+            }
+            .menu-hide .menu{
+                left: -50%;
+
+            }
+            .menu-hide .overlayer{
+
             }
         </style>
 
     </head>
-    <body ng-controller="angCtrl">
-        <div class="container">
-            <div class="col-md-12" >
-                <div class="tab-menu">
-                    <ul >
-                        <li class="tab-menu-active"><a href="" >Tab1</a></li>
-                        <li><a href="" >Tab2</a></li>
-                        <li><a href="" >Tab3</a></li>
-                        <li><a href="" >Tab4</a></li>
-                    </ul>
-                </div>
-                <div class="tab-content">
-                    <div class="tab-content-in">
-                        <div>Tab 1</div>
-                        <div>Tab 2</div>
-                        <div>Tab 3</div>
-                        <div>Tab 4</div>
+    <body ng-controller="angCtrl" class='menu-hide'>
+        <div class="menu">
+            <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+            </ul>
+        </div>
+        <div class="container content-all">
+            <div class="overlayer"></div>
+            <div class="row" >
+                <div style="height: 15vh" class="header">
+                    <span style="font-size: 1.5em;" id='bt' >&#9776;</span>
+                    <div class="tab-menu">
+                        <ul >
+                            <li class="tab-menu-active"><a href="" >Tab1</a></li>
+                            <li><a href="" >Tab2</a></li>
+                            <li><a href="" >Tab3</a></li>
+                            <li><a href="" >Tab4</a></li>
+                        </ul>
                     </div>
                 </div>
+                <div style="height: 70vh">
+                    <div class="tab-content">
+                        <div class="tab-content-in tab-content-animate">
+                            <div>
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                                Tab 1<br />
+                            </div>
+                            <div>Tab 2</div>
+                            <div>Tab 3</div>
+                            <div>Tab 4</div>
+                        </div>
+                    </div>
+                </div>
+                <div style="height: 15vh"></div>
             </div>
         </div>
     </body>
     <script type="text/javascript">
-        var tabMenus = $('.tab-menu > ul > li');
-        var tabContents = $('.tab-content-in > div');
 
         $('.tab-content-in > div').each(function (index) {
             if (index == 0) {
@@ -125,44 +215,39 @@
             });
         });
 
+
+
         function changeTab(idx) {
             tmp = idx;
             tmp = (-idx * 100) + "%";
-            tabContents[idx].parentNode.style.transform = "translate(" + tmp + ")";
-            tabContents[idx].parentNode.setAttribute('current', idx);
-            tabMenus.removeClass('tab-menu-active');
-            tabMenus[idx].classList.add('tab-menu-active');
+            $('.tab-content-in > div')[idx].parentNode.style.transform = "translate(" + tmp + ")";
+            $('.tab-content-in > div')[idx].parentNode.setAttribute('current', idx);
+            $('.tab-menu > ul > li').removeClass('tab-menu-active');
+            $('.tab-menu > ul > li')[idx].classList.add('tab-menu-active');
         }
 
-        //var mc = new Hammer($('.tab-content')[0]);
         var cur = Number($('.tab-content-in')[0].getAttribute('current'));
         var changeLimit = 20;
         var totContent = $('.tab-content-in > div').length;
 
         $('.tab-content-in > div').each(function (ind) {
-            mc = new Hammer(this, {
-                transform_always_block: true
-            });
+            mc = new Hammer(this);
 
             mc.on('panleft panright', function (ev) {
                 $('.tab-content-in').removeClass("tab-content-animate");
                 prc = ev.deltaX * 100 / ev.target.offsetWidth;
-                //console.log(prc);
                 console.log(prc + " - " + cur);
-                if ((ev.type == "panright" && ind < 1) || (ev.type == "panleft" && ind >= totContent - 1)) {
-
+                $('.tab-content-in').css({
+                    transform: "translate(" + (prc + (ind * -100)) + "%)"
+                });
+                if (prc <= -changeLimit && ind < totContent - 1) {
+                    cur = ind + 1;
+                } else if (prc >= changeLimit && ind > 0) {
+                    cur = ind - 1;
                 } else {
-                    $('.tab-content-in').css({
-                        transform: "translate(" + (prc + (ind * -100)) + "%)"
-                    });
-                    if (prc <= -changeLimit) {
-                        cur = ind + 1;
-                    } else if (prc >= changeLimit) {
-                        cur = ind - 1;
-                    } else {
-                        cur = ind;
-                    }
+                    cur = ind;
                 }
+
             });
 
             mc.on('panend', function (ev) {
@@ -171,6 +256,16 @@
             });
 
         });
+        $('#bt, .overlayer').click(function (ev) {
+            toogleMenu();
+        });
+        function toogleMenu() {
+            $('body').toggleClass('menu-hide').toggleClass("menu-show");
+        }
 
+        hm = new Hammer($('html')[0]);
+        hm.on('swiperight', function (ev) {
+            console.log(ev);
+        });
     </script>
 </html>
