--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <div class="col-md-12">
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <ins class="adsbygoogle"
-                         style="display:inline-block;width:100%;height:90px"
+                         style="display:inline-block;width:100%;height:100%;"
                          data-ad-client="ca-pub-8292462256462069"
                          data-ad-slot="5075994036"></ins>
                     <script>
