--- a/test2.html
+++ b/test2.html
@@ -29,23 +29,23 @@
         </script>
         <style type="text/css">
             .test{
-                width: 80%;
-                height: 500px;
+                width: 300px;
                 border: solid red 1px; 
-                position: relative;
+                overflow: hidden;
             }
             .test > div{
-                width: 100px;
-                height: 100px;
+                border: solid green 1px;
+                width: 1000%;
+                height: 100%;
+                position: relative;
+                overflow: auto;
+            }
+            .test > div > div{
                 border: solid blue 1px;
-                position: absolute;
-                right: 0;
-                left: 0;
-                top: 0;
-                bottom: 0;
-                margin: auto auto;
-                
-                
+                display: inline-block;
+                //width: 100%;
+                float: left;
+
             }
         </style>
 
@@ -53,7 +53,118 @@
 
     <body ng-controller="angCtrl" >
         <div class="test">
-            <div></div>
+            <div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+                <div>
+                    abc<br />
+                    abc<br />
+                    abc<br />
+                </div>
+            </div>
         </div>
     </body>
 </html>
